--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel-notification-channels/sipgate",
+    "name": "clickbar/laravel-notification-channel-sipgate",
     "description": "Laravel notifications driver for sipgate.de",
     "homepage": "https://github.com/laravel-notification-channels/sipgate",
     "license": "MIT",
@@ -18,10 +18,10 @@
         }
     ],
     "require": {
-        "php": ">=7.2",
+        "php": ">=8.1",
         "guzzlehttp/guzzle": "^7.2",
-        "illuminate/notifications": "~5.5 || ~6.0 || ~7.0",
-        "illuminate/support": "~5.5 || ~6.0 || ~7.0",
+        "illuminate/notifications": "~8.0 || ~9.0",
+        "illuminate/support": "~8.0 || ~9.0",
         "ext-json": "*"
     },
     "require-dev": {
